# mrot

./: Cargo.toml  LICENSE  README.md
crates/libmrot/: Cargo.toml  README.md
crates/libmrot/src/: convert.rs  error.rs  lib.rs  meal_record.rs  sqlite_storage.rs  storage.rs
crates/libmrot/tests/: add_when_show.rs  meal_records.rs  parse_date.rs  random_meal.rs  remove_meals.rs  rename_meals.rs  suggest_meals.rs  test_libmrot.rs  unique_meals.rs
crates/libmrot/tests/features/: add_when_show.feature  leap_second_days.feature  meal_records.feature  open_storage.feature  parse_date.feature  random_meal.feature  remove_meals.feature  rename_meals.feature  suggest_meals.feature  unique_meals.feature
crates/mrot/: Cargo.toml  README.md  build.rs
crates/mrot-test-utils/: Cargo.toml  README.md
crates/mrot-test-utils/src/: argument.rs  common_steps.rs  error.rs  lib.rs
crates/mrot/src/: cli.rs  config.rs  error.rs  main.rs  run.rs
crates/mrot_cli/: Cargo.toml  README.md
crates/mrot_cli/src/: lib.rs
crates/mrot_config/: Cargo.toml  README.md
crates/mrot_config/src/: lib.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
scripts/: publish-all.sh
src/: cli.rs  config.rs  error.rs  lib.rs  meal.rs  storage.rs
