[workspace]

members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.84"
authors = ["Sven Siegmund <sven.siegmund@gmail.com>"]
description = "Meal rotator"
repository = "https://github.com/fleetingbytes/mrot/"
homepage = "https://crates.io/crates/mrot/"
documentation = "https://docs.rs/mrot/latest/mrot"
license = "BSD-2-Clause"
keywords = ["tools", "tracking", "meal", "cooking", "calendar"]
categories = ["command-line-utilities"]

[workspace.dependencies]
libmrot = { path = "crates/libmrot", version = "0.1.0-alpha.4" }
mrot_cli = { path = "crates/mrot_cli", version = "0.1.0-alpha.4" }
mrot_config = { path = "crates/mrot_config", version = "0.1.0-alpha.4" }
mrot-test-utils = { path = "crates/mrot-test-utils" }

chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_complete_nushell = "4"
color-eyre = "0.6"
confy = { version = "0.6", features = ["ron_conf"], default-features = false }
cucumber = { version = "0.21", features = ["timestamps", "tracing"] }
directories = "6"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
sqlite = "0.36"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }
two_timer = "2"

[workspace.lints.rust]

[workspace.lints.clippy]
