[package]
name = "libmrot"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Library for recording and planning meals"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono = { workspace = true, features = ["alloc"] }
confy = { workspace = true }
directories = { workspace = true }
sqlite = { workspace = true }
tracing = { workspace = true }
two_timer = { workspace = true }

[dev-dependencies]
cucumber = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
mrot-test-utils = { workspace = true }

[lints.rust]
missing_docs = "deny"

[[test]]
name = "add_when_show"
harness = false

[[test]]
name = "parse_date"
harness = false

[[test]]
name = "suggest_meals"
harness = false
