[package]
name = "mrot-test-utils"
version = "0.1.0-alpha.3"
publish = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Utilities for integration tests of the mrot app"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cucumber = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libmrot = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
