[package]
name = "mrot"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Meal rotator. Record the meals you consume and get suggestions what to cook next."
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
clap_complete_nushell = { workspace = true }
confy = { workspace = true }
directories = { workspace = true }
libmrot = { workspace = true }
mrot_config = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
