[package]
name = "mrot_cli"
version = "0.1.0"
publish = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
libmrot = { workspace = true }
mrot_config = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
clap_complete_nushell = { workspace = true }
confy = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[lints.rust]
missing_docs = "deny"
