[package]
name = "mrot_cli"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Deprecated command line interface for the meal rotator app (mrot)"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { workspace = true }

[lints.rust]
missing_docs = "deny"
