[package]
name = "mrot_config"
version = "0.1.0"
publish = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
confy = { workspace = true }

[lints]
