[package]
name = "mrot_config"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Deprecated configuration for the meal rotator app (mrot)"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
confy = { workspace = true }

[lints]
